# my-wallet

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tmp.py
.github/workflows/: test-branch.yml
config/: __init__.py  base.py
my_wallet/: __init__.py  __main__.py  app.py  const.py  errors.py  manager.py  storage.py  utils.py
tests/: conftest.py  test_manager.py  test_storage.py
tests/test_manager/: conftest.py  test_manager.py
