[tool.poetry]
name = "my-wallet"
version = "0.1.0"
description = ""
authors = ["Kirill Churkin <k.churkin@bi.zone>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
